discussion/kv_engine/157582/157582_rev16_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-47308: Use MemoryDomain::Secondary for libmagma

Create a proxy class that MagmaKVStore will use for accessing the real
Magma. The proxy class will ensure that the Secondary domain is
selected as we call into libmagma.

In this first patch not all function calls are executing in the
secondary domain as further work is required to ensure any heap memory
returned from the library is freed in the correct domain.

Change-Id: I42c955317670f822e1be080102053c97973fde95

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Jim Walker
Date: 2021-08-18 19:38:43.000000000
Message: 
Uploaded patch set 16.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-08-18 19:49:44.000000000
Message: 
Patch Set 16: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38717/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\evp_store_single_threaded_test.cc(112): error C3861: "hasMagma": identifier not found ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38717/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11419/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:112:9: error: use of undeclared identifier "hasMagma"; did you mean "isMagma"? [clang-diagnostic-error]
    if (hasMagma()) {
        ^~~~~~~~
        isMagma
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.h:150:10: note: "isMagma" declared here
    bool isMagma() const {
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11419/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:112:9:
error: use of undeclared identifier "hasMagma"; did you mean "isMagma"? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/11419/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1061/ : FAILURE

Compile error at [2021-08-18T19:49:06.330Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:112:9:
error: ?hasMagma? was not declared in this scope; did you mean ?isMagma??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/1061/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1051/ : FAILURE

Compile error at [2021-08-18T19:43:19.625Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:112:9:
error: use of undeclared identifier "hasMagma"; did you mean "isMagma"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/1051/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12136/ : FAILURE

Compile error at [2021-08-18T19:43:32.261Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:112:9:
error: use of undeclared identifier "hasMagma"; did you mean "isMagma"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/12136/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13020/ : FAILURE

Compile error at [2021-08-18T19:42:29.171Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:112:9:
error: ?hasMagma? was not declared in this scope; did you mean ?isMagma??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/13020/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13226/ : FAILURE

Compile error at [2021-08-18T19:43:12.270Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:112:9:
error: ?hasMagma? was not declared in this scope; did you mean ?isMagma??
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/13226/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13597/ : FAILURE

Compile error at [2021-08-18T19:42:08.533Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:112:9:
error: use of undeclared identifier "hasMagma"; did you mean "isMagma"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/13597/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/21134/ : FAILURE

Compile error at [2021-08-18T19:42:39.629Z] ../kv_engine/engines/ep/tests/module_tests/evp_store_single_threaded_test.cc:112:9:
error: use of undeclared identifier "hasMagma"; did you mean "isMagma"?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/21134/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/33013/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/10132/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
